--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.1",
   "description": "A Koa Framework Kit",
   "main": "index.js",
+  "engines": {
+    "node": ">=4"
+  },
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --reporter spec --require should --harmony test/* --bail"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --reporter spec --require should test/* --bail",
+    "test-cov": "NODE_ENV=test node node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -u exports --require should test/* --bail",
+    "test-travis": "NODE_ENV=test node node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -u exports --require should test/* --bail"
   },
   "repository": {
     "type": "git",
@@ -36,13 +41,19 @@
   },
   "homepage": "https://github.com/zedgu/koa-kit",
   "dependencies": {
-    "debug": "^2.1.0",
-    "koa": "^0.13.0",
-    "koa-body": "^0.4.0",
-    "koa-conditional-get": "^1.0.2",
+    "debug": "^2.2.0",
+    "koa": "^1.2.0",
+    "koa-body": "^1.4.0",
+    "koa-conditional-get": "^1.0.3",
     "koa-csrf": "^2.1.3",
-    "koa-etag": "^2.0.0",
-    "koa-http-errors": "^0.2.0",
-    "koa-logger": "^1.2.2"
+    "koa-etag": "^2.1.1",
+    "koa-http-errors": "^0.3.0",
+    "koa-logger": "^1.3.0"
+  },
+  "devDependencies": {
+    "istanbul-harmony": "*",
+    "mocha": "*",
+    "should": "*",
+    "supertest": "*"
   }
 }
