--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ node_js:
   - "5"
   - "6"
 script: "npm run test-travis"
-after_script: "npm install coveralls && cat ./coverage/lcov.info | coveralls"
+after_script: "npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
