--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
   "homepage": "https://github.com/zedgu/koa-kit",
   "dependencies": {
     "debug": "^2.2.0",
-    "koa": "^1.2.0",
-    "koa-body": "^1.4.0",
-    "koa-conditional-get": "^1.0.3",
-    "koa-csrf": "^2.1.3",
-    "koa-etag": "^2.1.1",
-    "koa-http-errors": "^0.3.0",
-    "koa-logger": "^1.3.0"
+    "koa": "^2.2.0",
+    "koa-body": "^2.1.0",
+    "koa-conditional-get": "^2.0.0",
+    "koa-csrf": "^3.0.6",
+    "koa-etag": "^3.0.0",
+    "koa-generic-session": "^1.11.5",
+    "koa-http-errors": "^0.4.0",
+    "koa-logger": "^3.0.0"
   },
   "devDependencies": {
     "istanbul-harmony": "*",
